--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                             <div class='experience description'>
                                 <ul>
                                     <li class='text-small'>Working on the Virtual Machines Efficiency team within Oracle Cloud Infrastructure (OCI) Compute</li>
-                                    <li class='text-small'>Designing and building a system to monitor usage of reserved compute resources and identify resources to be reclaimed</li>
-                                    <li class='text-small'>Creating internal usage metrics, dashboards, and alarms using Java and Oracle Monitoring Query Language (MQL)</li>
+                                    <li class='text-small'>Designed and built a system to monitor usage of reserved compute resources and identify resources to be reclaimed</li>
+                                    <li class='text-small'>Created internal usage metrics, dashboards, and alarms using Java and Oracle Monitoring Query Language (MQL)</li>
                                 </ul>
                             </div>
                         </div>
@@ -208,10 +208,12 @@
                         <div class='experience description'>
                             <h2 class='title-small'>Planned Coursework</h2>
                             <ul>
+                                <li class='text-small'>Optimal Control (CSE 599)</li>
                                 <li class='text-small'>Deep Learning (CSE 490)</li>
                                 <li class='text-small'>Quantum Computation (CSE 490)</li>
                                 <li class='text-small'>Operating Systems (CSE 451)</li>
                                 <li class='text-small'>Distributed Systems (CSE 452)</li>
+                                <li class='text-small'>Linear, Nonlinear, and Discrete Optimization (MATH 407-409)</li>
                             </ul>
                         </div>
                     </div>
