--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
                         <div class='experience description'>
                             <h2 class='title-small'>Selected Coursework</h2>
                             <ul>
-                                <li class='text-small'>Algorithms (CSE 421)</li>
                                 <li class='text-small'>Machine Learning (CSE 546)</li>
+                                <li class='text-small'>Reinforcement Learning and Optimal Control (CSE 579)</li>
+                                <li class='text-small'>Deep Learning (CSE 599)</li>
+                                <li class='text-small'>Algorithms (CSE 421)</li>
                                 <li class='text-small'>Autonomous Robotics (CSE 478)</li>
                                 <li class='text-small'>Computer Vision (CSE 455)</li>
                                 <li class='text-small'>Databases (CSE 344)</li>
-                                <li class='text-small'>Systems Programming (CSE 333)</li>
-                                <li class='text-small'>Probability (MATH 394/395, CSE 312)</li>
                             </ul>
                         </div>
                     </div>
@@ -208,11 +208,10 @@
                         <div class='experience description'>
                             <h2 class='title-small'>Planned Coursework</h2>
                             <ul>
-                                <li class='text-small'>Optimal Control (CSE 599)</li>
-                                <li class='text-small'>Deep Learning (CSE 490)</li>
+                                <li class='text-small'>Deep Robotic Learning (CSE 599)</li>
+                                <li class='text-small'>Modern Algorithms (CSE 422)</li>
                                 <li class='text-small'>Quantum Computation (CSE 490)</li>
-                                <li class='text-small'>Operating Systems (CSE 451)</li>
-                                <li class='text-small'>Distributed Systems (CSE 452)</li>
+                                <li class='text-small'>AI (CSE 473)</li>
                                 <li class='text-small'>Linear, Nonlinear, and Discrete Optimization (MATH 407-409)</li>
                             </ul>
                         </div>
